# luister

./: .gitignore  Makefile  README.md  luister.code-workspace  pyproject.toml
.github/workflows/: build-release.yml  ci-cd.yml  package.yml  static.yml  uvx.yml
docs/: app.js  index.html  style.css
mobile/: main.py
mobile/luister/: __init__.py
packaging/: build.py  luister.spec
packaging/icons/: luister.icns
packaging/linux/: luister.desktop
packaging/windows/: installer.nsi
scripts/: setup-android-dev.sh
src/luister/: __init__.py  logcnf.py  lyrics.py  manager.py  theme.py  vectors.py  video_widget.py  views.py  visualizer.py
src/luister/installer_cli/: __init__.py  uninstaller.py  updater.py
src/luister/installer_gui/: __init__.py  uninstaller.py  updater.py
tests/: __init__.py  test_basic.py
